[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "println"          
path = "src/println.rs"

[[bin]]
name = "functions"          
path = "src/functions.rs"

[[bin]]
name = "flowcontrol"          
path = "src/flowcontrol.rs"

[[bin]]
name = "mutability"          
path = "src/mutability.rs"


[[bin]]
name = "stack_heap"          
path = "src/stack-heap.rs"

[[bin]]
name = "ownership"          
path = "src/ownership.rs"


[[bin]]
name = "reference"          
path = "src/reference.rs"


[[bin]]
name = "borrowing"          
path = "src/borrowing.rs"


[dependencies]


